# choose-your-own-game-theory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.dev.yaml  docker-compose.yaml  feature.yaml  justfile  openapi.json  project-overview-ios-app.md  project-overview-simulation-resolver.md  project-overview.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 779257e57d84_add_scenario_category_and_is_library.py  78c60dd8d971_initial_schema.py  a41f9c2d5e83_add_playthrough_analysis.py  b3d7f5a92c61_refresh_tokens_apple_catalog.py  b7d3e9f1c2a4_living_scenarios.py  c1f4a8d27e93_users.py  d8e2b5c91f47_user_email_verified.py  e4a8c1d29f73_context_enabled_scenarios.py  f2b6d4a81c59_scenario_insights.py
backend/app/: config.py  db.py  deps.py  living_run.py  main.py  metrics.py  models.py  openapi_export.py  schemas.py  seed.py  seed_catalog.py  seed_generate.py
backend/app/prompts/: builder.py  context.py  engine.py  living.py
backend/app/routers/: admin.py  auth.py  catalog.py  playthroughs.py  scenarios.py  stats.py
backend/app/seed_data/diplomacy-crisis/: hostage-on-the-bridge.json  pandemic-protocol.json  sanctions-game.json  the-ceasefire.json  the-defector.json  the-water-treaty.json  thirteen-days.json
backend/app/seed_data/engineering-leadership/: burnout-on-the-line.json  (+8 more)
backend/app/services/: apple.py  auth.py  builder.py  email.py  engine.py  living.py  llm.py
backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_context.py  test_email_flows.py  test_health_seed_data.py  test_living.py  test_llm.py  test_observability.py  test_openapi.py  test_play.py  test_scenarios.py  test_stats.py
(+260 files in other folders)
